--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,34 @@
-/* FONTES */
+/* IMPORTAÇÃO DE FONTES */
 @import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
 
+/* ESTILOS GERAIS */
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.fonte-personalizada {
+  font-family: 'Bangers', cursive;
+}
+
+/* CORES */
+.cor-1 {
+  background: #303030;
+}
+
+a {
+  color: #375a7f;
+}
+
+a:hover {
+  color: #375a7f;
+}
+
+i#footer {
+  color: #ff0000;
+}
+
+/* ICONE SOBRE A IMAGEM DA MUSICA 'A TOCAR' */
 .overlay {
   position: relative;
 }
@@ -26,28 +50,9 @@ body {
   z-index: 500;
 }
 
-.fonte-personalizada {
-  font-family: 'Bangers', cursive;
-}
-
+/* NAVBAR */
 .logotipo {
   width: 350px;
-}
-
-.cor-1 {
-  background: #303030;
-}
-
-a {
-  color: #375a7f;
-}
-
-a:hover {
-  color: #375a7f;
-}
-
-i#footer {
-  color: #ff0000;
 }
 
 .navbar-brand {
