Transferidos estilso inline para ficheiro CSS

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ i#footer {
   color: #ff0000;
 }
 
+.icone-social {
+  color: #fff;
+}
+
 /* ICONE SOBRE A IMAGEM DA MUSICA 'A TOCAR' */
 .overlay {
   position: relative;
