Atualizada licença no cabeçalho do código-fonte

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
+/*
+ * @description Folha de estilos personalizada do website da Rádio Afonso Santos
+ *
+ * Website para a Rádio Afonso Santos
+ * https://github.com/radio-afonso-santos/website
+ *
+ * Uma rádio criada com ajuda do software Open Source AzuraCast
+ * https://azuracast.com
+ * https://github.com/AzuraCast/AzuraCast
+ *
+ * @author Afonso Santos
+ * http://afonsosantos-dev.tk
+ * https://github.com/afonsosantos
+ *
+ * Criado em 07/2019
+ *
+ * @license Apache-2.0
+ */
+
 /* IMPORTAÇÃO DE FONTES */
 @font-face {
   font-family: 'Bangers';
